--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Social data protocol built on NEAR"
+      content="The 2 Week (Aug 11-17) BOS native online hackathon"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@NearSocial_">
-    <meta name="twitter:image" content="https://near.social/assets/logo.png">
-    <meta property="og:image" content="https://near.social/assets/logo.png">
+    <meta name="twitter:site" content="@NEARHACKS">
+    <meta name="twitter:image" content="https://ipfs.io/ipfs/bafkreigodovrvslm5os3u54pq2qbwvdcnsnkhgxatc6r6orvifpglw2sdq">
+    <meta property="og:image" content="https://ipfs.io/ipfs/bafkreigodovrvslm5os3u54pq2qbwvdcnsnkhgxatc6r6orvifpglw2sdq">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Near Social" />
-    <meta property="og:description" content="Social data protocol built on NEAR" />
+    <meta property="og:title" content="BOS HACKS" />
+    <meta property="og:description" content="The 2 Week (Aug 11-17) BOS native online hackathon" />
     <link rel="apple-touch-icon" href="favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="manifest.json" />
-    <title>Near Social</title>
+    <title>BOS HACKS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
